--- a/explore.ipynb
+++ b/explore.ipynb
@@ -26,14 +26,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_edag_data = json.load(open('edag_data/train.json', mode='r', encoding='utf-8'))\n",
+    "train_edag_data = json.load(open('edag_data/sample_train.json', mode='r', encoding='utf-8'))\n",
     "dev_edag_data = json.load(open('edag_data/dev.json', mode='r', encoding='utf-8'))\n",
     "test_edag_data = json.load(open('edag_data/test.json', mode='r', encoding='utf-8'))\n",
     "data = train_edag_data + dev_edag_data + test_edag_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(950.2193197755961, 3435, 2163, 1602, 767)\n",
+      "(20.228611500701263, 59, 43, 34, 17)\n",
+      "(46.97402586147126, 210, 137, 110, 33)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cal_stat(l):\n",
+    "    total = len(l)\n",
+    "    sl = sorted(l)\n",
+    "    t99 = sl[int(total * 0.99)]\n",
+    "    t95 = sl[int(total * 0.95)]\n",
+    "    t90 = sl[int(total * 0.9)]\n",
+    "    t50 = sl[int(total * 0.5)]\n",
+    "    return (np.mean(l), t99, t95, t90, t50)\n",
+    "        \n",
+    "    \n",
+    "len_content = []\n",
+    "num_sentence = []\n",
+    "len_sentence = []\n",
+    "for _, ins in train_edag_data + test_edag_data:\n",
+    "    sentences = ins['sentences']\n",
+    "    for sentence in sentences:\n",
+    "        len_sentence.append(len(sentence))\n",
+    "    content = ''.join(sentences)\n",
+    "    len_content.append(len(content))\n",
+    "    num_sentence.append(len(sentences))\n",
+    "\n",
+    "print(cal_stat(len_content))\n",
+    "print(cal_stat(num_sentence))\n",
+    "print(cal_stat(len_sentence))"
    ]
   },
   {
