add pos tag loss

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -21,12 +21,13 @@
     "from model import collate_label\n",
     "import torch.nn as nn\n",
     "import pickle\n",
-    "from sklearn.linear_model import LogisticRegressionCV, LogisticRegression"
+    "from sklearn.linear_model import LogisticRegressionCV, LogisticRegression\n",
+    "from pyltp import Segmentor, Postagger, Parser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_model_path = os.path.join('ltp_model', 'pos.model')\n",
+    "postagger = Postagger()\n",
+    "postagger.load(pos_model_path)\n",
+    "\n",
+    "cws_model_path = os.path.join('ltp_model', 'cws.model')\n",
+    "segmentor = Segmentor()\n",
+    "segmentor.load(cws_model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -61,21 +77,92 @@
     "    t50 = sl[int(total * 0.5)]\n",
     "    return (np.mean(l), t99, t95, t90, t50)\n",
     "        \n",
-    "    \n",
+    "\n",
     "len_content = []\n",
     "num_sentence = []\n",
     "len_sentence = []\n",
+    "pos_tag_count = {}\n",
     "for _, ins in train_edag_data + test_edag_data:\n",
     "    sentences = ins['sentences']\n",
     "    for sentence in sentences:\n",
     "        len_sentence.append(len(sentence))\n",
+    "        \n",
+    "        words = list(segmentor.segment(sentence))\n",
+    "        postags = list(postagger.postag(words))\n",
+    "        for postag in postags:\n",
+    "            if postag.startswith('n'):\n",
+    "                postag = 'n'\n",
+    "            pos_tag_count[postag] = pos_tag_count.get(postag, 0) + 1\n",
     "    content = ''.join(sentences)\n",
     "    len_content.append(len(content))\n",
     "    num_sentence.append(len(sentences))\n",
+    "    \n",
     "\n",
     "print(cal_stat(len_content))\n",
     "print(cal_stat(num_sentence))\n",
     "print(cal_stat(len_sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "n 1064021 0.3741697832214187 0.3741697832214187\n",
+      "v 616005 0.21662209421929643 0.5907918774407152\n",
+      "wp 410316 0.14429024311764488 0.73508212055836\n",
+      "m 148561 0.0522424248817995 0.7873245454401595\n",
+      "u 127627 0.04488085002382472 0.8322053954639842\n",
+      "p 100124 0.035209244343167405 0.8674146398071516\n",
+      "a 72898 0.025635047482403993 0.8930496872895556\n",
+      "r 70988 0.02496338377844241 0.918013071067998\n",
+      "q 60810 0.02138422504602303 0.939397296114021\n",
+      "c 58609 0.02061022933271442 0.9600075254467354\n",
+      "d 57654 0.020274397480733626 0.9802819229274691\n",
+      "b 39474 0.013881284319465764 0.9941632072469349\n",
+      "j 10858 0.003818285077285283 0.9979814923242202\n",
+      "ws 3866 0.0013595036018405695 0.9993409959260607\n",
+      "i 1801 0.0006333331575051386 0.9999743290835659\n",
+      "h 37 1.3011286411821282e-05 0.9999873403699777\n",
+      "z 27 9.494722516734448e-06 0.9999968350924945\n",
+      "k 9 3.1649075055781495e-06 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = list(pos_tag_count.items())\n",
+    "l.sort(key=lambda x: x[1], reverse=True)\n",
+    "s = sum(list(map(lambda x: x[1], l)))\n",
+    "print(len(l))\n",
+    "base = 0\n",
+    "for postag, num in l:\n",
+    "    base += num / s\n",
+    "    print(postag, num, num / s, base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2843685"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
    ]
   },
   {
