--- a/explore.ipynb
+++ b/explore.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,16 @@
     "\n",
     "cws_model_path = os.path.join('ltp_model', 'cws.model')\n",
     "segmentor = Segmentor()\n",
-    "segmentor.load(cws_model_path)"
+    "segmentor.load(cws_model_path)\n",
+    "\n",
+    "parser_model_path = os.path.join('ltp_model', 'parser.model')\n",
+    "parser = Parser()\n",
+    "parser.load(parser_model_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -82,6 +86,7 @@
     "num_sentence = []\n",
     "len_sentence = []\n",
     "pos_tag_count = {}\n",
+    "rel_count = {}\n",
     "for _, ins in train_edag_data + test_edag_data:\n",
     "    sentences = ins['sentences']\n",
     "    for sentence in sentences:\n",
@@ -89,6 +94,10 @@
     "        \n",
     "        words = list(segmentor.segment(sentence))\n",
     "        postags = list(postagger.postag(words))\n",
+    "        arcs = list(parser.parse(words, postags))\n",
+    "        for arc in arcs:\n",
+    "            rel_count[arc.relation] = rel_count.get(arc.relation, 0) + 1\n",
+    "            \n",
     "        for postag in postags:\n",
     "            if postag.startswith('n'):\n",
     "                postag = 'n'\n",
@@ -101,6 +110,85 @@
     "print(cal_stat(len_content))\n",
     "print(cal_stat(num_sentence))\n",
     "print(cal_stat(len_sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2018年', '12月', '28日']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arc_head = len(''.join(words[:arcs[1].head - 1]))\n",
+    "arc_head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "ATT 1070907 0.37659128911957546 0.37659128911957546\n",
+      "WP 410325 0.14429340802515048 0.520884697144726\n",
+      "VOB 262449 0.09229186777016442 0.6131765649148904\n",
+      "COO 255984 0.09001840921199078 0.7031949741268811\n",
+      "ADV 250084 0.08794363651388955 0.7911386106407707\n",
+      "SBV 189564 0.06666139182082403 0.8578000024615948\n",
+      "RAD 121049 0.042567654293636605 0.9003676567552314\n",
+      "HED 115384 0.04057552084706991 0.9409431776023014\n",
+      "POB 97041 0.034125087694312134 0.9750682652966135\n",
+      "LAD 49748 0.017494202065277974 0.9925624673618915\n",
+      "CMP 11152 0.0039216720558008355 0.9964841394176923\n",
+      "FOB 9174 0.0032260957173526604 0.999710235135045\n",
+      "DBL 812 0.00028554498828105084 0.999995780123326\n",
+      "IOB 12 4.219876674104199e-06 1.0000000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = list(rel_count.items())\n",
+    "l.sort(key=lambda x: x[1], reverse=True)\n",
+    "s = sum(list(map(lambda x: x[1], l)))\n",
+    "print(len(l))\n",
+    "base = 0\n",
+    "for postag, num in l:\n",
+    "    base += num / s\n",
+    "    print(postag, num, num / s, base)"
    ]
   },
   {
